[gd_scene load_steps=46 format=4 uid="uid://b2qxixht7uo34"]

[ext_resource type="Script" uid="uid://3rhlfjrpfepm" path="res://scripts/nodes/proc-gen-tilemap.gd" id="1_3wu0g"]
[ext_resource type="Script" uid="uid://bie2poqli3glf" path="res://scenes/game_world/game_world.gd" id="1_6c6v5"]
[ext_resource type="TileSet" uid="uid://3lp7w512a61i" path="res://resources/tilesets/game_board.tres" id="1_tqoos"]
[ext_resource type="TileSet" uid="uid://cfsbh25ygujlm" path="res://resources/tilesets/fog_of_war.tres" id="3_0jtfi"]
[ext_resource type="Script" uid="uid://b60pfdc6xw7k7" path="res://scripts/nodes/map_camera.gd" id="3_bumdp"]
[ext_resource type="Script" uid="uid://bd046eokvcnu2" path="res://addons/phantom_camera/scripts/phantom_camera_host/phantom_camera_host.gd" id="4_bumdp"]
[ext_resource type="Script" uid="uid://c5kyjbsoeaeq1" path="res://ui/debug_ui.gd" id="5_cmh4g"]
[ext_resource type="PackedScene" uid="uid://ct8j6u4avyd2y" path="res://scenes/player/player.tscn" id="5_dlaip"]
[ext_resource type="PackedScene" uid="uid://ceyramfufub1e" path="res://scenes/game_world/card_target_selector/card_target_selector.tscn" id="6_ph1f2"]
[ext_resource type="Resource" uid="uid://cjimv3kddhqjg" path="res://resources/data/stats/player/riftwalker_starting_stats.tres" id="6_u4x5r"]
[ext_resource type="Script" uid="uid://bg86wd36pp63f" path="res://ui/player_ui/player_hand_ui.gd" id="7_pdbwf"]
[ext_resource type="Script" uid="uid://dmnb4jshnwq7q" path="res://scripts/resources/stats/enemy_stats.gd" id="9_7ammx"]
[ext_resource type="Resource" uid="uid://bhto68irinlan" path="res://scenes/enemy/obilisk/obelisk_enemy.tres" id="10_lsh46"]
[ext_resource type="PackedScene" uid="uid://clybmd6dqmpt8" path="res://scenes/enemy/obilisk/obilisk_enemy.tscn" id="10_r4vuc"]
[ext_resource type="Resource" uid="uid://bxbiu0j3jgbic" path="res://scenes/enemy/horror/horror_enemy.tres" id="11_g7x0y"]
[ext_resource type="Script" uid="uid://cc8ssghrjdrno" path="res://scripts/nodes/enemy_handler.gd" id="12_lsh46"]
[ext_resource type="PackedScene" uid="uid://bn20v4c3khchm" path="res://ui/player_ui/stats_ui.tscn" id="12_odt01"]
[ext_resource type="Script" uid="uid://dsd1inxc2s3jk" path="res://scenes/player/player_handler.gd" id="13_wek56"]
[ext_resource type="Script" uid="uid://bj3gfx8l4ra88" path="res://ui/world_ui/game_world_ui.gd" id="13_y5rsn"]
[ext_resource type="Resource" uid="uid://d3x2ax43x8lji" path="res://scenes/enemy/blob/blob_enemy.tres" id="14_7fs1y"]
[ext_resource type="Script" uid="uid://bhexx6mj1xv3q" path="res://addons/phantom_camera/scripts/phantom_camera/phantom_camera_2d.gd" id="16_qc6v1"]
[ext_resource type="Script" uid="uid://8umksf8e80fw" path="res://addons/phantom_camera/scripts/resources/tween_resource.gd" id="17_lorak"]
[ext_resource type="PackedScene" uid="uid://dg8i01hcrxwwd" path="res://ui/player_ui/tile_info.tscn" id="19_mf52o"]
[ext_resource type="PackedScene" uid="uid://c7uwlaelexcv8" path="res://ui/card_pile_button/card_pile_button.tscn" id="20_g06lf"]
[ext_resource type="PackedScene" uid="uid://cl0l31t03ehb0" path="res://ui/status_ui/status_handler.tscn" id="20_g7x0y"]
[ext_resource type="Texture2D" uid="uid://bw2e6kofldiiq" path="res://assets/icons/card-burn.svg" id="21_0br8l"]
[ext_resource type="Texture2D" uid="uid://dte2m4qyg4mfe" path="res://assets/icons/card-draw.svg" id="21_7fs1y"]
[ext_resource type="Script" uid="uid://bncsfkx6mq4ic" path="res://ui/map_ui/map_ui.gd" id="21_fg3oe"]
[ext_resource type="PackedScene" uid="uid://80y8in4wjr2c" path="res://ui/player_ui/enemy_info.tscn" id="22_csgag"]
[ext_resource type="Texture2D" uid="uid://dg0r2ppupt5fk" path="res://assets/icons/magnifying-glass.png" id="22_wgh4l"]
[ext_resource type="Theme" uid="uid://xso5aetv5tyl" path="res://resources/themes/hud_theme.tres" id="24_mkc5e"]
[ext_resource type="PackedScene" uid="uid://8ojfyictvua2" path="res://ui/world_ui/battle_over_panel.tscn" id="24_vophv"]
[ext_resource type="PackedScene" uid="uid://xug262m8e12y" path="res://ui/tool_tip_ui/tool_tip.tscn" id="25_5nmku"]
[ext_resource type="PackedScene" uid="uid://bb5iwy5af4ic7" path="res://ui/world_ui/world_message.tscn" id="25_g06lf"]
[ext_resource type="PackedScene" uid="uid://c2xcucb5g14wh" path="res://ui/card_pile/card_pile_view.tscn" id="29_lsh46"]
[ext_resource type="PackedScene" uid="uid://cp0delpgghq1k" path="res://ui/world_ui/world_message_container.tscn" id="30_xw31r"]
[ext_resource type="PackedScene" uid="uid://b653npq2sy2pg" path="res://ui/tool_tip_ui/status_view.tscn" id="33_csgag"]
[ext_resource type="Script" uid="uid://2fd75iq1ribc" path="res://ui/world_ui/red_flash.gd" id="33_hgfka"]

[sub_resource type="Resource" id="Resource_ht6dc"]
script = ExtResource("17_lorak")
duration = 1.0
transition = 0
ease = 2

[sub_resource type="LabelSettings" id="LabelSettings_0br8l"]
font_size = 40
font_color = Color(0.823529, 0.788235, 0.647059, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_arcjp"]
content_margin_left = 5.0
content_margin_right = 5.0
bg_color = Color(0.517647, 0.470588, 0.458824, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_color = Color(0.294118, 0.239216, 0.266667, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
shadow_size = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0y38y"]
bg_color = Color(0.294118, 0.239216, 0.266667, 1)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bhwwd"]
size = Vector2(1924, 699)

[sub_resource type="Gradient" id="Gradient_xw31r"]
interpolation_mode = 2
colors = PackedColorArray(0, 0, 0, 0, 0.47451, 0.266667, 0.290196, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_3kc8b"]
gradient = SubResource("Gradient_xw31r")
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(1, 1)

[node name="GameWorld" type="Node2D"]
script = ExtResource("1_6c6v5")
player_stats = ExtResource("6_u4x5r")
metadata/_edit_vertical_guides_ = [1876.0]
metadata/_edit_horizontal_guides_ = [112.0]

[node name="MapCamera" type="Camera2D" parent="." groups=["map_camera"]]
position = Vector2(944, 400)
zoom = Vector2(3, 3)
script = ExtResource("3_bumdp")

[node name="PhantomCameraHost" type="Node" parent="MapCamera"]
process_priority = 300
process_physics_priority = 300
script = ExtResource("4_bumdp")
metadata/_custom_type_script = "uid://bd046eokvcnu2"

[node name="Tilemap" type="Node2D" parent="." groups=["map_layer"]]
script = ExtResource("1_3wu0g")
map_height = 20
mana_weight = 1
warp_weight = 1

[node name="BaseLayer" type="TileMapLayer" parent="Tilemap"]
tile_map_data = PackedByteArray("AAAAAAAAAAAAAAAAAAABAAAAAAAAAAAAAAD//wAAAAAAAAAAAAD/////AAAAAAAAAAAAAP//AAAAAAAAAAAAAAEAAAAAAAAAAAD//wEAAAAAAAAAAAAUAAgAAAACAAAAAAAUAAkAAAAAAAAAAAAUAAoAAAADAAAAAAAUAAsAAAACAAAAAAAUAAwAAAABAAAAAAAUAA0AAAADAAAAAAAUAA4AAAADAAAAAAAUAA8AAAAAAAAAAAAUABAAAAAAAAAAAAAUABEAAAABAAAAAAAUABIAAAADAAAAAAAUABMAAAADAAAAAAAUABQAAAADAAAAAAAVAAgAAAABAAAAAAAVAAkAAAACAAAAAAAVAAoAAAADAAAAAAAVAAsAAAACAAAAAAAVAAwAAAADAAAAAAAVAA0AAAAAAAAAAAAVAA4AAAAAAAAAAAAVAA8AAAADAAAAAAAVABAAAAABAAAAAAAVABEAAAACAAAAAAAVABIAAAADAAAAAAAVABMAAAABAAAAAAAVABQAAAACAAAAAAAWAAgAAAABAAAAAAAWAAkAAAADAAAAAAAWAAoAAAAAAAAAAAAWAAsAAAABAAAAAAAWAAwAAAACAAAAAAAWAA0AAAADAAAAAAAWAA4AAAAAAAAAAAAWAA8AAAAAAAAAAAAWABAAAAACAAAAAAAWABEAAAAAAAAAAAAWABIAAAACAAAAAAAWABMAAAABAAAAAAAWABQAAAADAAAAAAAXAAgAAAABAAAAAAAXAAkAAAAAAAAAAAAXAAoAAAABAAAAAAAXAAsAAAAAAAAAAAAXAAwAAAADAAAAAAAXAA0AAAACAAAAAAAXAA4AAAABAAAAAAAXAA8AAAABAAAAAAAXABAAAAACAAAAAAAXABEAAAABAAAAAAAXABIAAAAAAAAAAAAXABMAAAACAAAAAAAXABQAAAACAAAAAAAYAAgAAAABAAAAAAAYAAkAAAABAAAAAAAYAAoAAAABAAAAAAAYAAsAAAADAAAAAAAYAAwAAAACAAAAAAAYAA0AAAABAAAAAAAYAA4AAAABAAAAAAAYAA8AAAAAAAAAAAAYABAAAAACAAAAAAAYABEAAAAAAAAAAAAYABIAAAADAAAAAAAYABMAAAADAAAAAAAYABQAAAADAAAAAAAZAAgAAAABAAAAAAAZAAkAAAABAAAAAAAZAAoAAAADAAAAAAAZAAsAAAAAAAAAAAAZAAwAAAACAAAAAAAZAA0AAAABAAAAAAAZAA4AAAAAAAAAAAAZAA8AAAACAAAAAAAZABAAAAADAAAAAAAZABEAAAADAAAAAAAZABIAAAAAAAAAAAAZABMAAAADAAAAAAAZABQAAAAAAAAAAAAaAAgAAAAAAAAAAAAaAAkAAAADAAAAAAAaAAoAAAACAAAAAAAaAAsAAAABAAAAAAAaAAwAAAADAAAAAAAaAA0AAAADAAAAAAAaAA4AAAACAAAAAAAaAA8AAAADAAAAAAAaABAAAAACAAAAAAAaABEAAAADAAAAAAAaABIAAAADAAAAAAAaABMAAAADAAAAAAAaABQAAAADAAAAAAAbAAgAAAACAAAAAAAbAAkAAAACAAAAAAAbAAoAAAAAAAAAAAAbAAsAAAACAAAAAAAbAAwAAAACAAAAAAAbAA0AAAACAAAAAAAbAA4AAAABAAAAAAAbAA8AAAACAAAAAAAbABAAAAAAAAAAAAAbABEAAAADAAAAAAAbABIAAAADAAAAAAAbABMAAAABAAAAAAAbABQAAAAAAAAAAAAcAAgAAAADAAAAAAAcAAkAAAAAAAAAAAAcAAoAAAACAAAAAAAcAAsAAAABAAAAAAAcAAwAAAAAAAAAAAAcAA0AAAABAAAAAAAcAA4AAAAAAAAAAAAcAA8AAAACAAAAAAAcABAAAAACAAAAAAAcABEAAAABAAAAAAAcABIAAAADAAAAAAAcABMAAAACAAAAAAAcABQAAAACAAAAAAAdAAgAAAADAAAAAAAdAAkAAAACAAAAAAAdAAoAAAADAAAAAAAdAAsAAAABAAAAAAAdAAwAAAABAAAAAAAdAA0AAAAAAAAAAAAdAA4AAAABAAAAAAAdAA8AAAAAAAAAAAAdABAAAAABAAAAAAAdABEAAAAAAAAAAAAdABIAAAADAAAAAAAdABMAAAABAAAAAAAdABQAAAABAAAAAAAeAAgAAAABAAAAAAAeAAkAAAABAAAAAAAeAAoAAAACAAAAAAAeAAsAAAADAAAAAAAeAAwAAAADAAAAAAAeAA0AAAADAAAAAAAeAA4AAAACAAAAAAAeAA8AAAADAAAAAAAeABAAAAAAAAAAAAAeABEAAAABAAAAAAAeABIAAAACAAAAAAAeABMAAAADAAAAAAAeABQAAAAAAAAAAAAfAAgAAAADAAAAAAAfAAkAAAACAAAAAAAfAAoAAAADAAAAAAAfAAsAAAAAAAAAAAAfAAwAAAACAAAAAAAfAA0AAAADAAAAAAAfAA4AAAADAAAAAAAfAA8AAAAAAAAAAAAfABAAAAACAAAAAAAfABEAAAABAAAAAAAfABIAAAADAAAAAAAfABMAAAADAAAAAAAfABQAAAAAAAAAAAAgAAgAAAADAAAAAAAgAAkAAAABAAAAAAAgAAoAAAADAAAAAAAgAAsAAAACAAAAAAAgAAwAAAACAAAAAAAgAA0AAAADAAAAAAAgAA4AAAADAAAAAAAgAA8AAAAAAAAAAAAgABAAAAADAAAAAAAgABEAAAACAAAAAAAgABIAAAAAAAAAAAAgABMAAAAAAAAAAAAgABQAAAACAAAAAAAhAAgAAAADAAAAAAAhAAkAAAAAAAAAAAAhAAoAAAACAAAAAAAhAAsAAAACAAAAAAAhAAwAAAADAAAAAAAhAA0AAAABAAAAAAAhAA4AAAABAAAAAAAhAA8AAAABAAAAAAAhABAAAAACAAAAAAAhABEAAAAAAAAAAAAhABIAAAAAAAAAAAAhABMAAAADAAAAAAAhABQAAAAAAAAAAAAiAAgAAAAAAAAAAAAiAAkAAAACAAAAAAAiAAoAAAAAAAAAAAAiAAsAAAAAAAAAAAAiAAwAAAACAAAAAAAiAA0AAAABAAAAAAAiAA4AAAADAAAAAAAiAA8AAAACAAAAAAAiABAAAAACAAAAAAAiABEAAAACAAAAAAAiABIAAAAAAAAAAAAiABMAAAAAAAAAAAAiABQAAAADAAAAAAAjAAgAAAAAAAAAAAAjAAkAAAACAAAAAAAjAAoAAAACAAAAAAAjAAsAAAADAAAAAAAjAAwAAAABAAAAAAAjAA0AAAADAAAAAAAjAA4AAAACAAAAAAAjAA8AAAADAAAAAAAjABAAAAABAAAAAAAjABEAAAADAAAAAAAjABIAAAADAAAAAAAjABMAAAABAAAAAAAjABQAAAADAAAAAAAkAAgAAAABAAAAAAAkAAkAAAAAAAAAAAAkAAoAAAACAAAAAAAkAAsAAAAAAAAAAAAkAAwAAAAAAAAAAAAkAA0AAAADAAAAAAAkAA4AAAADAAAAAAAkAA8AAAACAAAAAAAkABAAAAABAAAAAAAkABEAAAACAAAAAAAkABIAAAACAAAAAAAkABMAAAAAAAAAAAAkABQAAAADAAAAAAAlAAgAAAAAAAAAAAAlAAkAAAADAAAAAAAlAAoAAAADAAAAAAAlAAsAAAAAAAAAAAAlAAwAAAACAAAAAAAlAA0AAAADAAAAAAAlAA4AAAACAAAAAAAlAA8AAAACAAAAAAAlABAAAAACAAAAAAAlABEAAAADAAAAAAAlABIAAAACAAAAAAAlABMAAAAAAAAAAAAlABQAAAADAAAAAAAmAAgAAAAAAAAAAAAmAAkAAAACAAAAAAAmAAoAAAACAAAAAAAmAAsAAAADAAAAAAAmAAwAAAABAAAAAAAmAA0AAAABAAAAAAAmAA4AAAACAAAAAAAmAA8AAAADAAAAAAAmABAAAAABAAAAAAAmABEAAAABAAAAAAAmABIAAAABAAAAAAAmABMAAAADAAAAAAAmABQAAAADAAAAAAA=")
tile_set = ExtResource("1_tqoos")

[node name="FogLayer" type="TileMapLayer" parent="Tilemap"]
modulate = Color(0.830469, 0.830469, 0.830469, 0.929412)
z_index = 3
tile_set = ExtResource("3_0jtfi")

[node name="EnemyHandler" type="Node2D" parent="."]
script = ExtResource("12_lsh46")

[node name="Obilisk" parent="EnemyHandler" node_paths=PackedStringArray("tilemap") instance=ExtResource("10_r4vuc")]
position = Vector2(944, 400)
spawn_pool = Array[ExtResource("9_7ammx")]([ExtResource("14_7fs1y"), ExtResource("11_g7x0y")])
stats = ExtResource("10_lsh46")
tilemap = NodePath("../../Tilemap")

[node name="PlayerHandler" type="Node" parent="." node_paths=PackedStringArray("player", "player_hand") groups=["player_handler"]]
script = ExtResource("13_wek56")
player = NodePath("../Player")
player_hand = NodePath("../GameWorldUI/PlayerUI/Hand")

[node name="Player" parent="." node_paths=PackedStringArray("stats_ui", "status_handler") instance=ExtResource("5_dlaip")]
stats_ui = NodePath("../GameWorldUI/PlayerUI/Stats")
status_handler = NodePath("../GameWorldUI/PlayerUI/StatusHandler")

[node name="PhantomCamera2D" type="Node2D" parent="Player" node_paths=PackedStringArray("follow_target")]
unique_name_in_owner = true
top_level = true
position = Vector2(0, 40)
script = ExtResource("16_qc6v1")
follow_mode = 2
follow_target = NodePath("..")
zoom = Vector2(3, 3)
tween_resource = SubResource("Resource_ht6dc")
tween_on_load = false
follow_offset = Vector2(0, 40)
metadata/_custom_type_script = "uid://bhexx6mj1xv3q"

[node name="CardTargetSelector" parent="." instance=ExtResource("6_ph1f2")]

[node name="GameWorldUI" type="CanvasLayer" parent="." groups=["ui_layer"]]
layer = 4
script = ExtResource("13_y5rsn")

[node name="DebugUI" type="Control" parent="GameWorldUI" node_paths=PackedStringArray("base_layer", "map_camera")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("5_cmh4g")
base_layer = NodePath("../../Tilemap/BaseLayer")
map_camera = NodePath("../../MapCamera")

[node name="MarginContainer" type="MarginContainer" parent="GameWorldUI/DebugUI"]
layout_mode = 0
offset_left = 1600.0
offset_top = 448.0
offset_right = 1640.0
offset_bottom = 488.0

[node name="DebugContainer" type="VBoxContainer" parent="GameWorldUI/DebugUI/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="PlayerUI" type="Control" parent="GameWorldUI"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Hand" type="Control" parent="GameWorldUI/PlayerUI" node_paths=PackedStringArray("player")]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -480.0
offset_top = -270.0
offset_right = 488.0
grow_horizontal = 2
grow_vertical = 0
script = ExtResource("7_pdbwf")
player = NodePath("../../../Player")

[node name="HandContainer" type="HBoxContainer" parent="GameWorldUI/PlayerUI/Hand"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Stats" parent="GameWorldUI/PlayerUI" instance=ExtResource("12_odt01")]
layout_mode = 0
offset_left = 1696.0
offset_top = 808.0
offset_right = 1872.0
offset_bottom = 1056.0

[node name="StatusHandler" parent="GameWorldUI/PlayerUI" node_paths=PackedStringArray("status_owner") instance=ExtResource("20_g7x0y")]
layout_mode = 0
offset_left = 1552.0
offset_top = 808.0
offset_right = 1592.0
offset_bottom = 848.0
status_owner = NodePath("../../../Player")
status_icon_size = 70

[node name="TileInfo" parent="GameWorldUI/PlayerUI" instance=ExtResource("19_mf52o")]
layout_mode = 0
offset_left = 8.0
offset_top = 112.0
offset_right = 322.0
offset_bottom = 360.0

[node name="EnemyInfo" parent="GameWorldUI/PlayerUI" instance=ExtResource("22_csgag")]
layout_mode = 0
offset_left = 8.0
offset_top = 392.0
offset_right = 320.0
offset_bottom = 680.0

[node name="EndTurnButton" type="Button" parent="GameWorldUI/PlayerUI"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.7125
anchor_top = 0.748148
anchor_right = 0.800521
anchor_bottom = 0.799074
offset_right = 1.0
theme = ExtResource("24_mkc5e")
disabled = true
text = "End Turn"
metadata/_edit_use_anchors_ = true

[node name="DrawPileButton" parent="GameWorldUI/PlayerUI" node_paths=PackedStringArray("counter") instance=ExtResource("20_g06lf")]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 64.0
offset_top = -184.0
offset_right = 192.0
offset_bottom = -56.0
grow_vertical = 0
texture_normal = ExtResource("21_7fs1y")
counter = NodePath("Counter")

[node name="Counter" type="Label" parent="GameWorldUI/PlayerUI/DrawPileButton"]
layout_mode = 0
offset_left = 80.0
offset_top = 80.0
offset_right = 126.0
offset_bottom = 135.0
text = "99"
label_settings = SubResource("LabelSettings_0br8l")
horizontal_alignment = 1

[node name="DiscardPileButton" parent="GameWorldUI/PlayerUI" node_paths=PackedStringArray("counter") instance=ExtResource("20_g06lf")]
unique_name_in_owner = true
layout_mode = 0
offset_left = 1392.0
offset_top = 896.0
offset_right = 1520.0
offset_bottom = 1024.0
texture_normal = ExtResource("21_0br8l")
counter = NodePath("Counter")

[node name="Counter" type="Label" parent="GameWorldUI/PlayerUI/DiscardPileButton"]
layout_mode = 0
offset_top = 80.0
offset_right = 46.0
offset_bottom = 135.0
text = "99"
label_settings = SubResource("LabelSettings_0br8l")
horizontal_alignment = 1

[node name="MapUI" type="Control" parent="GameWorldUI"]
visible = false
layout_mode = 3
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -48.0
offset_top = -252.0
offset_right = -40.0
offset_bottom = 148.0
grow_horizontal = 0
grow_vertical = 2
script = ExtResource("21_fg3oe")

[node name="VSlider" type="VSlider" parent="GameWorldUI/MapUI"]
layout_mode = 0
offset_left = -8.0
offset_right = 16.0
offset_bottom = 400.0
theme_override_styles/slider = SubResource("StyleBoxFlat_arcjp")
theme_override_styles/grabber_area = SubResource("StyleBoxFlat_0y38y")
min_value = 1.0
max_value = 5.0
step = 0.01
value = 2.0
editable = false
scrollable = false
tick_count = 20
ticks_on_borders = true

[node name="TextureRect" type="TextureRect" parent="GameWorldUI/MapUI"]
layout_mode = 0
offset_left = -28.0
offset_top = 396.0
offset_right = 36.0
offset_bottom = 460.0
texture = ExtResource("22_wgh4l")
stretch_mode = 5

[node name="CardDropArea" type="Area2D" parent="GameWorldUI"]
collision_layer = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="GameWorldUI/CardDropArea"]
position = Vector2(963, 339.5)
shape = SubResource("RectangleShape2D_bhwwd")
debug_color = Color(0, 0.6, 0.701961, 0.0509804)

[node name="ToolTip" parent="GameWorldUI" instance=ExtResource("25_5nmku")]
offset_left = -768.0
offset_top = 896.0
offset_right = -384.0
offset_bottom = 1018.0

[node name="WorldMessageContainer" parent="GameWorldUI" instance=ExtResource("30_xw31r")]
offset_top = 115.0
offset_bottom = -394.0

[node name="WorldMessage" parent="GameWorldUI/WorldMessageContainer" instance=ExtResource("25_g06lf")]
layout_mode = 2

[node name="Effects" type="CanvasLayer" parent="." groups=["fx_layer"]]
layer = 4

[node name="RedFlash" type="TextureRect" parent="Effects"]
modulate = Color(1, 1, 1, 0)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = SubResource("GradientTexture2D_3kc8b")
script = ExtResource("33_hgfka")

[node name="Timer" type="Timer" parent="Effects/RedFlash"]
wait_time = 0.1
one_shot = true

[node name="ProjectileStart" type="Control" parent="Effects" groups=["projectile_start"]]
unique_name_in_owner = true
layout_mode = 3
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_top = 784.0
offset_bottom = 784.0
grow_horizontal = 2

[node name="BattleOverLayer" type="CanvasLayer" parent="."]
layer = 5

[node name="BattleOverPanel" parent="BattleOverLayer" instance=ExtResource("24_vophv")]
visible = false

[node name="CardPileViews" type="CanvasLayer" parent="."]
layer = 6

[node name="DrawPileView" parent="CardPileViews" instance=ExtResource("29_lsh46")]
unique_name_in_owner = true
visible = false

[node name="DiscardPileView" parent="CardPileViews" instance=ExtResource("29_lsh46")]
unique_name_in_owner = true
visible = false

[node name="StatusViewLayer" type="CanvasLayer" parent="."]
layer = 6

[node name="StatusView" parent="StatusViewLayer" instance=ExtResource("33_csgag")]
visible = false
